// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`system props withSystemProps() applies multiple theme values 1`] = `
.emotion-0 {
  font-family: Helvetica,Verdana,sans-serif;
  margin: 16px;
}

<b
  className="emotion-0"
  fontFamily="sans"
  m={2}
/>
`;

exports[`system props withSystemProps() applies one theme value 1`] = `
.emotion-0 {
  margin: 16px;
}

<b
  className="emotion-0"
  m={2}
/>
`;
